# Drone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
env/: setup.sh
inc/: Draw3D_api_interface.hh  Dron.hh  El_Powierzchni.hh  Graniastoslup.hh  Inter_Dron.hh  Inter_Rysowanie.hh  OpenGL_API.hh  PlaskaPowierzchnia.hh  Plaskowyz.hh  Scena.hh  Stozki.hh  Wzgorze.hh  getopt.h  konkretnaMacierz.hh  macierzRot.hh  prostopadloscian.hh  ukladWspolrzednych.hh  wektor2D.hh
inc/win/: getopt.c  unistd.h
src/: Dron.cpp  Graniastoslup.cpp  OpenGL_API.cpp  PlaskaPowierzchnia.cpp  Plaskowyz.cpp  Scena.cpp  Stozki.cpp  Wzgorze.cpp  konkretnaMacierz.cpp  main.cpp  prostopadloscian.cpp  wektor2D.cpp
